[project]
name = "calender-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "itsdangerous",
    "python-multipart>=0.0.22",
    "google-adk>=1.28.0",
    "python-dotenv>=1.2.2",
]
